--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -12,7 +12,7 @@
   <body
     class="bg-image"
     style="
-      background-image: url('https://images.squarespace-cdn.com/content/v1/6160742e58596279bef906ba/1652183962472-LM1WN5GVWUEP0TBAAINC/0_VxCR_2R9v9RoeRFv.jpeg');
+      background-image: url('https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-03.jpg');
       height: 100vh;
     "
   >
@@ -53,7 +53,7 @@
         <a
           href="#"
           class="navbar-brand text-danger"
-          style="padding-left: 25px; padding-right: 25px; size: 0cap"
+          style="color: white; font-weight: 700; padding-left: 25px; padding-right: 25px; size: 0cap"
           >TASK BUDDY</a
         >
         <button
@@ -87,7 +87,8 @@
           </div>
           <div class="navbar-nav ms-auto" style="padding-right:25px;">
             <button
-              class="btn btn-outline-success my-2 my-sm-0"
+              class="btn btn-outline-danger my-2 my-sm-0"
+              style="color: white;"
               data-toggle="modal"
               data-target="#signout"
               
@@ -180,6 +181,9 @@
             </span>
           </div>
           <div class="col-md-4 box">
+            
+          </div>
+          <div class="col-md-4 box">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -198,19 +202,9 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4 box">
-            <ul class="list-inline quick-links">
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
-    </footer>
+    </footer class="footer" style="position: fixed;">
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
