--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -41,7 +41,7 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">
                     No
                   </button>
-                  <button type="button" class="btn btn-danger">Yes</button>
+                  <button type="button" class="btn btn-danger" onclick="window.location='/'">Yes</button>
             </div>
           </div>
         </div>
