--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,14 +8,109 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body
     class="bg-image"
     style="
       background-image: url('https://visme.co/blog/wp-content/uploads/2017/07/50-Beautiful-and-Minimalist-Presentation-Backgrounds-03.jpg');
-      height: 100vh;
+    overflow: hidden;
     "
   >
+
+  <div
+  class="modal fade"
+  id="createTask"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="loginTitle"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered" style="width: 400px;" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title text-success" id="exampleModalLongTitle" style="font-weight: bold;">
+          CREATE TASK
+        </h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="create-validation" novalidate>            
+        <div class="mb-3 row">
+          <div class="form-floating">
+            <input
+              type="text"
+              id="title"
+              class="form-control"
+              placeholder="Title"
+              required
+            />
+            <label for="title" style="padding-left: 25px">
+              Title</label
+            >
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <div class="form-floating">
+            <input
+              type="text"
+              id="description"
+              class="form-control"
+              placeholder="Description"
+              required
+            />
+            <label for="description" style="padding-left: 25px">
+              Description</label
+            >
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <div class="col form-floating">
+            <select
+            class="form-select d-flex justify-content-center"
+            id="priority"
+            >
+            <option value="Low">Low</option>
+            <option value="Medium">Medium</option>
+            <option value="High">High</option>
+          </select>
+          <label for="model"> Priority</label>
+        </div>
+      </div>
+      <div class="mb-3 row">
+        <div class="form-floating">
+          <input
+            type="text"
+            id="duration"
+            class="form-control"
+            placeholder="duration"
+            required
+          />
+          <label for="duration" style="padding-left: 25px">
+            Duration(in hours)</label
+          >
+        </div>
+      </div>
+        <div
+          class="d-flex justify-content-center"
+          style="padding-bottom: 25px"
+        >
+          <button class="btn btn-success" id="createBtn">Create</button>
+        </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
     <!-- signout -->
     <div
       class="modal fade"
@@ -48,163 +143,109 @@
       </div>
     </div>
 
-    <header>
-      <nav class="navbar navbar-expand navbar-light bg-dark">
-        <a
-          href="#"
-          class="navbar-brand text-danger"
-          style="color: white; font-weight: 700; padding-left: 25px; padding-right: 25px; size: 0cap"
-          >TASK BUDDY</a
-        >
-        <button
-          type="button"
-          class="navbar-toggler"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarCollapse"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse"
-          id="navbarCollapse"
-          style="color: white"
-        >
-          <div class="navbar-nav">
-            <a href="#" class="nav-item nav-link active" style="color: white"
-              >Home</a
-            >
-            <a href="#" class="nav-item nav-link" style="color: white"
-              >About Us</a
-            >
-            <a href="#" class="nav-item nav-link" style="color: white">Help</a>
-            <a
-              href="#"
-              class="nav-item nav-link disabled"
-              tabindex="-1"
-              style="color: darkgrey"
-              >Reports</a
-            >
-          </div>
-          <div class="navbar-nav ms-auto" style="padding-right:25px;">
-            <button
-              class="btn btn-outline-danger my-2 my-sm-0"
-              style="color: white;"
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <a href="/dashboard" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <span class="fs-5 d-none d-sm-inline">Dashboard</span>
+                </a>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link align-middle px-0">
+                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                        </a>
+                    </li>
+                    <li>
+                      <a href="/analytics" class="nav-link px-0 align-middle">
+                        <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Analytics</span>
+                    </a>
+                    </li>
+                <hr>
+                <div class="dropdown pb-4" style="margin-top: 450px;">
+                    <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fa fa-user"></i>
+                        <span class="d-none d-sm-inline mx-1">test.user</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" data-toggle="modal"
+                        data-target="#signout">LogOut</a></li>
+                      <li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col py-3 home">
+            <div style="color: blue; font-weight: 700; font-size: 44px; margin: 20px;">WELCOME TEST USER</div>
+            <div class="container-fluid">
+              <table class="table">
+                <thead class="table-dark">
+                  <td>Tasks</td>
+                  <td>Description</td>
+                  <td>Options</td>
+                </thead>
+                <tbody class="table-secondary" id="datas"></tbody>
+              </table>
+            </div>
+            <div class="row col-sm-3">
+              <button
+              class="btn btn-success my-2 my-sm-0"
+              style="color: white; margin-left: 90%;"
               data-toggle="modal"
-              data-target="#signout"
-              
-            >
-              LogOut
+              data-target="#createTask"
+              >
+              Create Task
             </button>
           </div>
-        </div>
-      </nav>
-    </header>
+          </div>
+    </div>
+  </div>
+<!--Main layout-->
     <div class="container-fluid">
       <img src="sources/logo2.png" height="475px" alt="" />
     </div>
-    <footer class="bg-dark">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 footer-column">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <span class="footer-title">Product</span>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Product 2</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Plans & Prices</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Frequently asked questions</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4 footer-column">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <span class="footer-title">Company</span>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Job postings</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">News and articles</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4 footer-column">
-            <ul class="nav flex-column">
-              <li class="nav-item">
-                <span class="footer-title">Contact & Support</span>
-              </li>
-              <li class="nav-item">
-                <span class="nav-link"
-                  ><i class="fas fa-phone"></i>+47 45 80 80 80</span
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"
-                  ><i class="fas fa-comments"></i>Live chat</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"
-                  ><i class="fas fa-envelope"></i>Contact us</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"
-                  ><i class="fas fa-star"></i>Give feedback</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
+    <div style="height: 460px;"></div>
+    <script>
+        getData()
+        async function getData(){
+        axios.get("http://localhost:8080/task/test.user").then(function(response){
+        const div = document.getElementById("datas")
+        const created = response.data.data;
+        for(let v of created){
+          const row = document.createElement("tr")
+          const taskTitle = document.createElement("td");
+          taskTitle.innerHTML = v.title;
+          const taskDescription = document.createElement("td");
+          taskDescription.innerHTML = v.description;
+          const deletebtn = document.createElement("button");
+          deletebtn.innerHTML = '<i class="fa fa-trash"></i>';
+          deletebtn.classList.add("btn-danger");
+          deletebtn.addEventListener("click", ()=> deleteTask(v.id))
+          const opt = document.createElement("td");
+          opt.appendChild(deletebtn);
 
-        <div class="text-center"><i class="fas fa-ellipsis-h"></i></div>
-
-        <div class="row text-center">
-          <div class="col-md-4 box">
-            <span class="copyright quick-links"
-              >Copyright &copy; Your Website
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-            </span>
-          </div>
-          <div class="col-md-4 box">
-            
-          </div>
-          <div class="col-md-4 box">
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer class="footer" style="position: fixed;">
+          row.appendChild(taskTitle)
+          row.appendChild(taskDescription)
+          row.appendChild(opt)
+          div.appendChild(row)
+        }
+      })
+    }
+    async function deleteTask(tid){
+      axios.delete(`http://localhost:8080/task/${tid}`)
+      .then(function(response){
+        alert(response.data.data)
+        window.location.reload();
+      })
+      .catch(function(error){
+        alert(error.response.data.message);
+      })
+    }
+    </script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -220,5 +261,44 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      (function () {
+        "use strict";
+        const createBtn = document.getElementById('createBtn');
+      
+        createBtn.addEventListener('click', function (event) {
+          event.preventDefault();
+          event.stopPropagation();
+      
+          const form = createBtn.closest('.create-validation');
+      
+          if (form.checkValidity()) {
+            const title = document.getElementById('title').value;
+            const description = document.getElementById('description').value;
+            const priority = document.getElementById('priority').value;
+            const duration = document.getElementById('duration').value;
+            console.log(title, description, )
+            axios.post("http://localhost:8080/task/", {
+              title,
+              description,
+              priority,
+              duration,
+              task_status: "Create",
+              added_by: "test.user"
+            })
+            .then(function (response) {
+              console.log(response.headers.token)
+              alert(response.data.data)
+            })
+            .catch(function (error) {
+              alert(error.response.data.message);
+            });
+          } else {
+            form.classList.add('was-validated');
+          }
+        });
+      })();
+      </script>
+    
   </body>
 </html>
