--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -147,25 +147,25 @@
     <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
             <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
-                <a href="/dashboard" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                    <span class="fs-5 d-none d-sm-inline">Dashboard</span>
+                <a href="#" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                    <span class="fs-5 d-none d-sm-inline">TASK BUDDY</span>
                 </a>
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                     <li class="nav-item">
                         <a href="#" class="nav-link align-middle px-0">
-                            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                            <span class="ms-1 d-none d-sm-inline"><i class="fa fa-home"></i> Home</span>
                         </a>
                     </li>
                     <li>
-                      <a href="/analytics" class="nav-link px-0 align-middle">
-                        <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Analytics</span>
+                      <a href="/analytics?name=<%= user.username%>" class="nav-link px-0 align-middle">
+                        <span class="ms-1 d-none d-sm-inline"><i class="fas fa-tasks"></i> Analytics</span>
                     </a>
                     </li>
                 <hr>
                 <div class="dropdown pb-4" style="margin-top: 450px;">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fa fa-user"></i>
-                        <span class="d-none d-sm-inline mx-1">test.user</span>
+                        <span class="d-none d-sm-inline mx-1"><%= user.username%></span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
                         <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -180,7 +180,8 @@
             </div>
         </div>
         <div class="col py-3 home">
-            <div style="color: blue; font-weight: 700; font-size: 44px; margin: 20px;">WELCOME TEST USER</div>
+            <div class="text-success" style="font-weight: 700; font-size: 44px; margin: 20px;">Welcome <%= user.name%></div>
+            <div class="h4" style="margin-left: 25px; margin-bottom: 25px;">Your tasks are listed below</div>
             <div class="container-fluid">
               <table class="table">
                 <thead class="table-dark">
@@ -212,7 +213,8 @@
     <script>
         getData()
         async function getData(){
-        axios.get("http://localhost:8080/task/test.user").then(function(response){
+          const user = '<%= user.username%>'
+        axios.get(`http://localhost:8080/task/${user}`).then(function(response){
         const div = document.getElementById("datas")
         const created = response.data.data;
         for(let v of created){
@@ -277,18 +279,17 @@
             const description = document.getElementById('description').value;
             const priority = document.getElementById('priority').value;
             const duration = document.getElementById('duration').value;
-            console.log(title, description, )
             axios.post("http://localhost:8080/task/", {
               title,
               description,
               priority,
               duration,
               task_status: "Create",
-              added_by: "test.user"
+              added_by: "<%= user.username%>"
             })
             .then(function (response) {
-              console.log(response.headers.token)
               alert(response.data.data)
+              window.location.reload();
             })
             .catch(function (error) {
               alert(error.response.data.message);
@@ -299,6 +300,5 @@
         });
       })();
       </script>
-    
   </body>
 </html>
