msg for password

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -177,7 +177,7 @@
                 <label for="password" style="padding-left: 25px">
                   Password</label
                 >
-                <div class="invalid-feedback">Choose secure password</div>
+                <div class="invalid-feedback">Password must be more than 8 character with one uppercase, lowercase and special character</div>
               </div>
               <div class="form-floating col">
                 <input
