--- a/views/dragNdrop.ejs
+++ b/views/dragNdrop.ejs
@@ -129,6 +129,7 @@
   async function getData(){
     let id;
     const username = '<%= username%>'
+    console.log(username)
     axios.get(`http://localhost:8080/task/${username}?task_status=Create`).then(function(response){
       const div = document.getElementById("created-lane")
       const created = response.data.data;
